--- a/frontend/modules/auth/login/login.html
+++ b/frontend/modules/auth/login/login.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Iniciar Sesión - Versal</title>
-  <link rel="stylesheet" href="styles/style.css"/>
+  <link rel="stylesheet" href="../style.css"/>
 </head>
 <body>
   <div class="container">
     <div class="form-header">
-      <img src="resources/logoversal.png" alt="Logo de Versal" class="logo" />
+      <img src="../../../resources/logoversal.png" alt="Logo de Versal" class="logo" />
  
     </div>
     <form id="loginForm">
@@ -17,10 +17,10 @@
       <input type="email" name="email" placeholder="Correo electrónico" required />
       <input type="password" name="password" placeholder="Contraseña" required />
       <button type="submit">Ingresar</button>
-      <p>¿No tienes una cuenta? <a href="register.html">Regístrate aquí</a></p>
+      <p>¿No tienes una cuenta? <a href="../register/register.html">Regístrate aquí</a></p>
     </form>
   </div>
 
-  <script src="index.js"></script>
+  <script src="login.js"></script>
 </body>
 </html>
