--- a/frontend/modules/auth/register/register.html
+++ b/frontend/modules/auth/register/register.html
@@ -25,7 +25,7 @@
 
     <label style="font-size: 0.8rem;">
       <input type="checkbox" required />
-      Acepto los <a href="#">Términos de Servicio</a> y la <a href="#">Política de Privacidad</a>
+      Acepto los <a href="\frontend\modules\main\tyc.html">Términos de Servicio</a> y la <a href="#">Política de Privacidad</a>
     </label>
 
     <button type="submit">Crear Cuenta Gratuita</button>
