feat: Se implementó un editor de historias que permite organizar el texto en capítulos, añadir imágenes y videos, y consultar estadísticas como el conteo de palabras.

--- a/frontend/modules/main/navbar/navbar.html
+++ b/frontend/modules/main/navbar/navbar.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="navbar.css" />
-  <title>Navbar Test</title>
+  <title>Versal</title>
 </head>
 <body>
   <div class="navbar-placeholder">
-    <header class="versal-navbar">
+    <nav class="versal-navbar">
       <div class="navbar-container">
         <a href="/" class="logo">
           <img src="/frontend/resources/logoversal.png" alt="Versal Logo" />
@@ -23,7 +23,7 @@
           <input type="text" placeholder="Buscar historias, autores, géneros..." />
         </div>
 
-        <a href="\frontend\modules\stories\create-story\create_story.html" class="icon-button" title="Escribir">Crear historia</a>
+        <a href="/frontend/modules/stories/create-story/create_story.html" class="icon-button" title="Escribir">Crear historia</a>
 
         <!-- Botón Premium -->
         <a href="/premium" class="icon-button" title="Adquirir Premium">💎 Premium</a>
@@ -36,7 +36,7 @@
           </div>
         </div>
       </div>
-    </header>
+    </nav>
   </div>
 </body>
 </html>
