--- a/frontend/modules/stories/write-story/write_story.html
+++ b/frontend/modules/stories/write-story/write_story.html
@@ -8,9 +8,12 @@
   <title>Editor - Versal</title>
 </head>
 <body>
+  <a href="/frontend/modules/stories/create-story/create_story.html" class="btn-back">
+    🡰
+  </a>
 
   <header>
-    </header>
+  </header>
 
   <div id="navbar-placeholder"></div>
 
