feat: agrego página y estilos para la sección Premium, incluyendo funcionalidad de suscripción

--- a/frontend/modules/main/navbar/navbar.html
+++ b/frontend/modules/main/navbar/navbar.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="navbar.css" />
   <title>Versal</title>
 </head>
+
 <body>
   <div class="navbar-placeholder">
     <nav class="versal-navbar">
@@ -28,9 +30,11 @@
           <div id="filter-indicator" class="filter-indicator"></div>
         </div>
 
-        <a href="/frontend/modules/stories/create-story/create_story.html" class="icon-button" title="Escribir">Crear historia</a>
+        <a href="/frontend/modules/stories/create-story/create_story.html" class="icon-button" title="Escribir">Crear
+          historia</a>
 
-        <a href="/premium" class="icon-button" title="Adquirir Premium">💎 Premium</a>
+        <!-- Botón Premium -->
+        <a href="/frontend/modules/premium/premium.html" class="icon-button" title="Adquirir Premium">💎 Premium</a>
 
         <div class="nav-item dropdown">
           <button class="icon-button" title="Perfil">👤</button>
@@ -46,4 +50,5 @@
 
   <script src="navbar.js"></script>
 </body>
+
 </html>
