feat: vista de historias en el dashboard y vista previa de historias

--- a/frontend/modules/main/dashboard.html
+++ b/frontend/modules/main/dashboard.html
@@ -5,17 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Versal</title>
 
-    <!-- Estilos -->
     <link rel="stylesheet" href="dashboard.css" />
     <link rel="stylesheet" href="/frontend/modules/main/navbar/navbar.css" />
   </head>
   <body>
-    <!-- Navbar dinámico -->
     <div id="navbar-placeholder"></div>
 
     <div class="page">
       <main class="main">
-        <!-- Hero -->
         <section class="hero">
           <h1 class="hero-title">Descubre Historias Increíbles</h1>
           <p class="hero-subtitle">
@@ -24,51 +21,42 @@
           <a href="#" class="btn btn-hero">Explorar Ahora</a>
         </section>
 
-        <!-- Historias destacadas -->
         <section class="featured">
           <div class="section-header">
             <h2>Historias Destacadas</h2>
             <a href="/featured">Ver todas →</a>
           </div>
           <div class="cards" id="featured-stories">
-            <!-- Tarjetas dinámicas aquí -->
-          </div>
+            </div>
         </section>
 
-        <!-- Historias recomendadas -->
         <section class="recommended">
           <div class="section-header">
             <h2>Recomendadas para Ti</h2>
             <a href="/recommended">Ver todas →</a>
           </div>
           <div class="cards small" id="recommended-stories">
-            <!-- Tarjetas dinámicas aquí -->
-          </div>
+            </div>
         </section>
 
-      </div>
-
-            <!-- Footer -->
-      <footer class="footer">
-        <div class="footer-content">
-          <div class="footer-left">
-            <p><strong>Versal</strong> — Tu plataforma para leer, escribir y compartir historias únicas.</p>
-            <p><a href="/frontend/modules/main/tyc.html">Términos y condiciones</a></p>
-          </div>
-          <div class="footer-right">
-            <p>© 2025 Versal</p>
-            <div class="social-links">
-              <a href="#">Twitter</a>
-              <a href="#">Instagram</a>
-            </div>
+      </main>
+    </div> <footer class="footer">
+      <div class="footer-content">
+        <div class="footer-left">
+          <p><strong>Versal</strong> — Tu plataforma para leer, escribir y compartir historias únicas.</p>
+          <p><a href="/frontend/modules/main/tyc.html">Términos y condiciones</a></p>
+        </div>
+        <div class="footer-right">
+          <p>© 2025 Versal</p>
+          <div class="social-links">
+            <a href="#">Twitter</a>
+            <a href="#">Instagram</a>
           </div>
         </div>
-      </footer>
+      </div>
+    </footer>
 
-    
-
-    <!-- Scripts -->
     <script src="/frontend/modules/main/navbar/navbar.js"></script>
-    <script src="/frontend/modules/dashboard/dashboard.js"></script>
+    <script src="/frontend/modules/main/dashboard.js"></script>
   </body>
 </html>
